--- a/demos/styles/fade-box.css
+++ b/demos/styles/fade-box.css
@@ -7,10 +7,21 @@
   cursor: pointer;
 }
 .fade-box.fade-box-overflow .fade-box-content:after {
+  background: rgba(255, 255, 255, 0);
+  /* Old browsers */
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(30%, rgba(255, 255, 255, 0)), color-stop(100%, white));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 30%, white 100%);
+  /* Chrome10+,Safari5.1+ */
+  /* Opera 11.10+ */
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 30%, white 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+  /* IE6-9 */
   content: " ";
   display: block;
-  background: -webkit-linear-gradient(bottom, white, transparent 70%);
-  background: linear-gradient(0deg, white, transparent 70%);
   position: absolute;
   top: 0;
   left: 0;
