--- a/src/styles/fade-box.scss
+++ b/src/styles/fade-box.scss
@@ -1,48 +1,49 @@
-@mixin linearGradient($top, $bottom, $from, $to){
+@mixin linearGradient($top, $bottom, $from, $to) {
   background: $top; /* Old browsers */
-  background: -moz-linear-gradient(top,  $top $from, $bottom $to); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop($from,$top), color-stop($to,$bottom)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  $top $from,$bottom $to); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  $top $from,$bottom $to); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  $top $from,$bottom $to); /* IE10+ */
-  background: linear-gradient(to bottom,  $top $from,$bottom $to); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top, $top $from, $bottom $to); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop($from, $top), color-stop($to, $bottom)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, $top $from, $bottom $to); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, $top $from, $bottom $to); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, $top $from, $bottom $to); /* IE10+ */
+  background: linear-gradient(to bottom, $top $from, $bottom $to); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=0); /* IE6-9 */
 }
 
-.fade-box {
+.fade-box-content {
+  position: relative;
 
-  .fade-box-content {
-    height: 100%;
+  .fade-box-overflow & {
     overflow: hidden;
+    display: block;
+    cursor: pointer;
+    height: 100%;
     position: relative;
   }
 
-  &.fade-box-overflow {
-    .fade-box-content {
-      cursor: pointer;
-
-      &:after {
-        @include linearGradient(rgba(255,255,255,0), rgba(255,255,255,1), 30%, 100%);
-        content: " ";
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-    }
+  .fade-box-fixed-height & {
+    overflow: hidden;
+    height: 180px;
   }
 
-  &.fade-box-expand {
+  .fade-box-expand & {
+    overflow: visible;
     height: auto;
-    .fade-box-content {
-      height: auto;
-
-      &:after {
-        display: none;
-      }
-    }
   }
 
+  &:after {
+    .fade-box-overflow & {
+      @include linearGradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1), 0%, 100%);
+      content: " ";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .fade-box-expand & {
+      display: none;
+    }
+  }
 }
