--- a/src/styles/fade-box.scss
+++ b/src/styles/fade-box.scss
@@ -1,6 +1,6 @@
 $colorCollection: (
         green: #e0f5d6,
-        darkGreen: #cc0935,
+        darkGreen: #007d32,
         red: #cc0935,
         greyMedium: #898a8a,
         purple: #990099,
