--- a/src/styles/fade-box.scss
+++ b/src/styles/fade-box.scss
@@ -8,7 +8,7 @@ $colorCollection: (
         lightBlue: #ccebff,
         blue: #0099ff,
         cyan: #0099ff,
-        whiteOrange: #ff6600
+        whiteOrange: #ffffff
 );
 
 @mixin linearGradient($top, $bottom, $from, $to) {
